--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8084,3 +8084,101 @@ h5.alert-content {
     color: #393939;
     font-weight: normal;
 }
+/* New Design user Live Chat Start */
+.chat-top-control{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.chat-top-control li:not(:last-child){
+    margin-right: 1rem;
+}
+.chat-control-btn{
+    border: 2px solid #000;
+    height: 40px;
+    line-height: 38px;
+    padding: 0 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    background-color: transparent;
+    border-radius: 0.25rem;
+    outline: none !important;
+}
+.chat-tip .chat-control-btn {
+    background-color: #3c06a0;
+    border-color: #3c06a0;
+    color: #fff;
+}
+.chat-tip .chat-control-btn:hover {
+    background-color: #fff;
+    color: #3c06a0;
+}
+.chat-group .chat-control-btn {
+    background-color: #fff;
+    border-color: #898d52;
+    color: #4d4632;
+}
+.chat-group .chat-control-btn:hover {
+    background-color: #898d52;
+    color: #fff;
+}
+.chat-private .chat-control-btn {
+    background-color: #fff;
+    border-color: #422b36;
+    color: #422b36;
+}
+.chat-private .chat-control-btn:hover {
+    background-color: #422b36;
+    color: #fff;
+}
+.chat-exit .chat-control-btn {
+    background-color: #6a0e15;
+    border-color: #6a0e15;
+    color: #fff;
+}
+.chat-exit .chat-control-btn:hover {
+    background-color: #fff;
+    color: #6a0e15;
+}
+.new-video-chat-lft {
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    max-width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.new-video-chat-rgt {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 550px;
+    flex: 0 0 550px;
+    max-width: 550px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.video-chat-lft-control .chat-top-control .chat-control-btn:hover{
+    border-color: #8f17d9;
+    color: #8f17d9;
+}
+.video-chat-lft-control .chat-top-control li:not(:last-child) .chat-control-btn i{
+    margin-right: 0.5rem;
+}
+.watch-cost {
+    font-size: 1rem;
+    font-weight: 700;
+}
+.watch-cost i{
+    margin-right: 0.5rem;
+}
+.video-chat-lft-video {
+    position: relative;
+}
+.video-chat-lft-control {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+}
+/* New Design user Live Chat End */
