--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8294,6 +8294,7 @@ input[type=number]::-webkit-outer-spin-button{
 }
 .new-model-video-chat-lft-wrap {
     position: relative;
+    height: 100%;
 }
 .new-model-video-chat-lft .opentok_player_area{
     height: 100% !important;
@@ -8476,7 +8477,7 @@ input[type=number]::-webkit-outer-spin-button{
 .live-user-list-box + .live-user-list-box{
     margin-top: 20px;
 }
-.new_model_video_main {
+/* .new_model_video_main {
     height: calc(100vh - 140px);
 }
 .chat_box_wrap {
@@ -8484,7 +8485,7 @@ input[type=number]::-webkit-outer-spin-button{
 }
 .video_wrap_lft {
     height: calc(100vh - 140px);
-}
+} */
 .live-user-info-rgt li:not(:last-child) {
     margin-right: 0;
     margin-bottom: 4px;
@@ -8524,9 +8525,9 @@ input[type=number]::-webkit-outer-spin-button{
     text-align: center;
     outline: none;
 }
-.h-100vh {
+/* .h-100vh {
     height: 100vh;
-}
+} */
 .coin-img {
     max-width: 25px;
     display: inline-block;
