model live casting design full screen mode

--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8541,7 +8541,25 @@ input[type=number]::-webkit-outer-spin-button{
     position: absolute;
     right: 10px;
     bottom: 10px;
+    z-index: 2;
+}
+.video-screen-mode {
+    color: #fff;
+    height: 40px;
+    line-height: 38px;
+    padding: 0 1rem;
+    font-size: 1rem;
+    border: none;
+    background-color: rgba(161, 158, 158, 0.68);
+    border-radius: 0.25rem;
+    outline: none !important;
+}
+.small-screen-mode {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
 }
 /* Full screen mode */
+
 
 /* New Design user Live Chat End */
