--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8558,6 +8558,7 @@ input[type=number]::-webkit-outer-spin-button{
     position: fixed;
     right: 20px;
     bottom: 20px;
+    z-index: 2;
 }
 /* Full screen mode */
 
