working on group video live saction

--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8454,21 +8454,43 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .live-user-list-head {
-    background-color: #dddddd;
-    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+.live-user-list-head-close {
+    background-color: #000;
+    flex: 0 0 38px;
+    max-width: 38px;
+}
+.live-user-list-head-text{
+    background-color: #dddddd;
+    padding: 10px;
+    flex: 0 0 calc(100% - 53px);
+    max-width: calc(100% - 53px);
+    margin-left: 15px;
+}
+.hide-popup .hide_popup {
+    border: none;
+    background-color: transparent;
+    box-shadow: none;
+    color: #f02c00;
+    text-align: center;
+    outline: none;
+    font-size: 15px;
+    height: 38px;
+    line-height: 38px;
+    width: 38px;
+}
 
-.live-user-list-head h4 {
+.live-user-list-head-text h4 {
     padding: 0;
     margin: 0;
     font-size: 15px;
     text-transform: capitalize;
 }
 
-.live-user-list-head h5 {
+.live-user-list-head-text h5 {
     padding: 0;
     margin: 0;
     font-size: 14px;
@@ -8593,29 +8615,13 @@ input[type=number]::-webkit-outer-spin-button {
     color: #f02c00;
 }
 
-.hide-popup {
+/* .hide-popup {
     position: absolute;
     top: 0;
     right: 0;
-}
+} */
 
-.hide-popup .hide_popup {
-    border: none;
-    box-shadow: none;
-    background-color: #565656;
-    box-shadow: -2px 0px 4px 0px rgba(0, 0, 0, 0.19);
-    color: #f02c00;
-    height: 30px;
-    width: 30px;
-    line-height: 32px;
-    text-align: center;
-    outline: none;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
-}
+
 
 
 /* .h-100vh {
@@ -8664,6 +8670,19 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /* Full screen mode */
-
+.live-main-videowrap {
+    display: flex;
+}
+.live-main-videowrap {
+    height: 100%;
+}
+.live-main-videowrap-lft {
+    height: 100%;
+    flex: 1 0;
+}
+.live-main-videowrap-rgt {
+    height: 100%;
+    flex: 1 0;
+}
 
 /* New Design user Live Chat End */
