--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8684,5 +8684,61 @@ input[type=number]::-webkit-outer-spin-button {
     height: 100%;
     flex: 1 0;
 }
-
+.video-chat-ask-popup{
+    background-color: rgba(0, 0, 0, .5);
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 8;
+}
+.ask-popup-wrap {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #11180c;
+    padding: 40px;
+    border-radius: 10px 0;
+    text-align: center;
+    width: 600px;
+}
+.ask-popup-wrap h2 {
+    color: #fff;
+    font-size: 34px;
+    margin-bottom: 8px;
+}
+.ask-popup-wrap li{
+    flex: 1 0;
+}
+.ask-popup-wrap li:not(:last-child){
+    margin-right: 1rem;
+}
+.ask-popup-wrap .mode-chat-btn{
+    height: 40px;
+    line-height: 40px;
+    padding: 0 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    display: block;
+    width: 100%;
+    color: #fff;
+    background-color: #0cb3f0;
+    box-shadow: none;
+    border: none;
+    outline: none !important;
+}
+.ask-popup-wrap .mode-chat-btn i{
+    margin-right: 0.5rem;
+}
+.website-logo a{
+    display: block;
+    max-width: 150px;
+}
+.website-logo a img{
+    display: block;
+    width: 100%;
+}
 /* New Design user Live Chat End */
