--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8587,6 +8587,15 @@ input[type=number]::-webkit-outer-spin-button {
 .video_wrap_lft {
     height: calc(100vh - 140px);
 }
+/* Model Live */
+.chat_box_wrap {
+    height: calc(100vh - 142px);
+}
+
+.new_model_video_main {
+    height: calc(100vh - 140px);
+}
+/* Model Live */
 
 .live-user-info-rgt li:not(:last-child) {
     margin-right: 0;
@@ -8710,6 +8719,11 @@ input[type=number]::-webkit-outer-spin-button {
     width: 600px;
 }
 .ask-popup-wrap h2 {
+    color: #fff;
+    font-size: 2.125rem;
+    margin-bottom: 8px;
+}
+.ask-popup-wrap h3 {
     color: #fff;
     font-size: 2.125rem;
     margin-bottom: 8px;
