working on live video one=one

--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8773,4 +8773,16 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 1rem;
     padding: 5px 18px;
 }
+.user-two-video {
+    display: flex;
+    height: 100%;
+}
+.user-two-video-lft {
+    height: 100%;
+    flex: 1 0;
+}
+.user-two-video-rgt{
+    height: 100%;
+    flex: 1 0;
+}
 /* New Design user Live Chat End */
