--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8210,9 +8210,10 @@ h5.alert-content {
 }
 
 .live-sec-new .chatbox {
-    border-radius: 0;
     padding: 0;
-    background-color: #f1f1f1;
+    background-color: #f1fafd;
+    box-shadow: 0px 0px 10px 2px rgba(54, 56, 56, 0.13);
+    border-radius: 4px px 4px 0 0;
 }
 
 .live-sec-new .chatbox .chatlist {
@@ -8384,9 +8385,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .live-model-sec-new .chatbox {
-    border-radius: 0;
     padding: 0;
-    background-color: #f1f1f1;
+    background-color: #f1fafd;
+    box-shadow: 0px 0px 10px 2px rgba(54, 56, 56, 0.13);
+    border-radius: 4px 4px 0 0;
 }
 
 .live-model-sec-new .chatbox .chat-box-wrap {
@@ -8458,18 +8460,21 @@ input[type=number]::-webkit-outer-spin-button {
     align-items: center;
     justify-content: space-between;
 }
+
 .live-user-list-head-close {
     background-color: #000;
     flex: 0 0 38px;
     max-width: 38px;
 }
-.live-user-list-head-text{
+
+.live-user-list-head-text {
     background-color: #dddddd;
     padding: 10px;
     flex: 0 0 calc(100% - 53px);
     max-width: calc(100% - 53px);
     margin-left: 15px;
 }
+
 .hide-popup .hide_popup {
     border: none;
     background-color: transparent;
@@ -8587,7 +8592,10 @@ input[type=number]::-webkit-outer-spin-button {
 .video_wrap_lft {
     height: calc(100vh - 140px);
 }
+
+
 /* Model Live */
+
 .chat_box_wrap {
     height: calc(100vh - 142px);
 }
@@ -8595,6 +8603,8 @@ input[type=number]::-webkit-outer-spin-button {
 .new_model_video_main {
     height: calc(100vh - 140px);
 }
+
+
 /* Model Live */
 
 .live-user-info-rgt li:not(:last-child) {
@@ -8629,13 +8639,12 @@ input[type=number]::-webkit-outer-spin-button {
     color: #f02c00;
 }
 
+
 /* .hide-popup {
     position: absolute;
     top: 0;
     right: 0;
 } */
-
-
 
 
 /* .h-100vh {
@@ -8684,21 +8693,26 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /* Full screen mode */
+
 .live-main-videowrap {
     display: flex;
 }
+
 .live-main-videowrap {
     height: 100%;
 }
+
 .live-main-videowrap-lft {
     height: 100%;
     flex: 1 0;
 }
+
 .live-main-videowrap-rgt {
     height: 100%;
     flex: 1 0;
 }
-.video-chat-ask-popup{
+
+.video-chat-ask-popup {
     background-color: rgba(0, 0, 0, .5);
     position: fixed;
     left: 0;
@@ -8707,6 +8721,7 @@ input[type=number]::-webkit-outer-spin-button {
     width: 100%;
     z-index: 8;
 }
+
 .ask-popup-wrap {
     position: absolute;
     left: 50%;
@@ -8718,23 +8733,28 @@ input[type=number]::-webkit-outer-spin-button {
     text-align: center;
     width: 600px;
 }
+
 .ask-popup-wrap h2 {
     color: #fff;
     font-size: 2.125rem;
     margin-bottom: 8px;
 }
+
 .ask-popup-wrap h3 {
     color: #fff;
     font-size: 2.125rem;
     margin-bottom: 8px;
 }
-.ask-popup-wrap li{
+
+.ask-popup-wrap li {
     flex: 1 0;
 }
-.ask-popup-wrap li:not(:last-child){
+
+.ask-popup-wrap li:not(:last-child) {
     margin-right: 1rem;
 }
-.ask-popup-wrap .mode-chat-btn{
+
+.ask-popup-wrap .mode-chat-btn {
     height: 40px;
     line-height: 40px;
     padding: 0 1rem;
@@ -8749,17 +8769,21 @@ input[type=number]::-webkit-outer-spin-button {
     border: none;
     outline: none !important;
 }
-.ask-popup-wrap .mode-chat-btn i{
+
+.ask-popup-wrap .mode-chat-btn i {
     margin-right: 0.5rem;
 }
-.website-logo a{
+
+.website-logo a {
     display: block;
     max-width: 150px;
 }
-.website-logo a img{
+
+.website-logo a img {
     display: block;
     width: 100%;
 }
+
 .private-text-msg {
     position: fixed;
     left: 50%;
@@ -8767,22 +8791,28 @@ input[type=number]::-webkit-outer-spin-button {
     top: 20px;
     z-index: 2;
 }
+
 .privet-chat-req-msg {
     background-color: #0cb3f0;
     color: #fff;
     font-size: 1rem;
     padding: 5px 18px;
 }
+
 .user-two-video {
     display: flex;
     height: 100%;
 }
+
 .user-two-video-lft {
     height: 100%;
     flex: 1 0;
 }
-.user-two-video-rgt{
+
+.user-two-video-rgt {
     height: 100%;
     flex: 1 0;
 }
+
+
 /* New Design user Live Chat End */
