--- a/public/front/css/developer.css
+++ b/public/front/css/developer.css
@@ -1,347 +1,425 @@
 .error {
-	color: red;
+    color: red;
 }
+
 .success {
-	color: green;
+    color: green;
 }
+
 .logReg ul li a.greyBtn {
-	background: #747575;
+    background: #747575;
 }
+
 .logReg ul li a.greyBtn:hover {
-	background: #0cb3f0;
+    background: #0cb3f0;
 }
+
 .logReg ul li a.blueBtn {
-	background: #0cb3f0;
+    background: #0cb3f0;
 }
+
 .logReg ul li a.blueBtn:hover {
-	background: #747575;
+    background: #747575;
 }
+
 .file-upload .file-select input[type="file"] {
-	z-index: -1;
+    z-index: -1;
 }
+
 .file-upload .fp-close {
-	position: absolute;
-	z-index: 101;
-	right: 0;
-	top: 0;
-	display: block;
-	width: 20px;
-	height: 20px;
-	text-align: center;
-	line-height: 100%;
-	background: #dce4ec;
-	display: none;
+    position: absolute;
+    z-index: 101;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 100%;
+    background: #dce4ec;
+    display: none;
 }
+
 .file-upload .fp-close:hover {
-	background: #488bc9;
-	color: #fff;
+    background: #488bc9;
+    color: #fff;
 }
+
 .file-upload.active .fp-close {
-	display: block;
+    display: block;
 }
+
 .file-upload .file-preview {
-	margin: 0 0 10px 0;
-	display: none;
+    margin: 0 0 10px 0;
+    display: none;
 }
+
 .file-upload .file-preview img {
-	max-width: 100px;
-	max-height: 100px;
-	border: 4px solid;
+    max-width: 100px;
+    max-height: 100px;
+    border: 4px solid;
 }
+
 .file-upload.active .file-preview {
-	display: block;
+    display: block;
 }
-.commonBtn, .commonBtn2 {
-	line-height: 44px;
-	display: inline-block;
-	background: #00aff0;
-	text-align: center;
-	color: #040404;
-	font-size: 17px;
-	font-weight: 600;
-	text-transform: uppercase;
-	letter-spacing: .6px;
-	border: none;
-	padding: 0 40px;
-	-moz-border-radius: 30px;
-	-webkit-border-radius: 30px;
-	-ms-border-radius: 30px;
-	-o-border-radius: 30px;
-	border-radius: 30px;
-}
+
+.commonBtn,
 .commonBtn2 {
-	line-height: normal;
-	font-size: 15px;
-	padding: 6px 10px 4px 10px;
+    line-height: 44px;
+    display: inline-block;
+    background: #00aff0;
+    text-align: center;
+    color: #040404;
+    font-size: 17px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .6px;
+    border: none;
+    padding: 0 40px;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    border-radius: 30px;
 }
-.select2.select2-container, .select2-selection__rendered.ui-sortable {
-	display: block !important;
+
+.commonBtn2 {
+    line-height: normal;
+    font-size: 15px;
+    padding: 6px 10px 4px 10px;
 }
+
+.select2.select2-container,
+.select2-selection__rendered.ui-sortable {
+    display: block !important;
+}
+
 .modelModalBox .select2 ul li:not(:last-child) {
-	margin-bottom: initial;
+    margin-bottom: initial;
 }
+
 .crop_image_uploader .remove_photo {
-	position: absolute;
-	z-index: 9;
-	background: #333;
-	color: #fff;
-	right: -4px;
-	top: -4px;
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	text-align: center;
-	display: none;
+    position: absolute;
+    z-index: 9;
+    background: #333;
+    color: #fff;
+    right: -4px;
+    top: -4px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    display: none;
 }
+
 .crop_image_uploader.active .remove_photo {
-	display: block;
+    display: block;
 }
+
 .pfr-menu li.active a {
-	border-bottom: 2px solid #00aff0;
+    border-bottom: 2px solid #00aff0;
 }
+
 .comment-live-icon li span.fa-heart {
-	color: #fb0404;
+    color: #fb0404;
 }
+
 .comment-live-icon li span.fa-comment-alt {
-	color: #50e046;
+    color: #50e046;
 }
+
 .emoji_pad {
-	position: relative;
+    position: relative;
 }
+
 .emoji_pad textarea {
-	display: none;
+    display: none;
 }
+
 .emojionearea .emojionearea-editor {
-	min-height: 60px;
-	max-height: 60px;
-	padding: 15px 92px 10px 16px;
+    min-height: 60px;
+    max-height: 60px;
+    padding: 15px 92px 10px 16px;
 }
+
 .chatbox .emojionearea .emojionearea-editor {
-	min-height: 80px;
-	max-height: 80px;
+    min-height: 80px;
+    max-height: 80px;
 }
-.emojionearea, .emojionearea.form-control {
-	border-radius: 30px;
-	font-size: 13px;
+
+.emojionearea,
+.emojionearea.form-control {
+    border-radius: 30px;
+    font-size: 13px;
 }
+
 .emojionearea .emojionearea-button {
-	right: 56px;
-	top: 18px;
+    right: 56px;
+    top: 18px;
 }
+
 .emoji_pad .emoji_submit {
-	position: absolute;
-	width: 34px;
-	height: 34px;
-	background: #0cb3f0;
-	cursor: pointer;
-	border-radius: 50%;
-	bottom: 12px;
-	right: 11px;
-	color: #fff;
-	font-size: 16px;
-	line-height: 34px;
-	text-align: center;
+    position: absolute;
+    width: 34px;
+    height: 34px;
+    background: #0cb3f0;
+    cursor: pointer;
+    border-radius: 50%;
+    bottom: 12px;
+    right: 11px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 34px;
+    text-align: center;
 }
+
 .set_post_comment_react i {
-	color: #fb0404;
+    color: #fb0404;
 }
+
 .media_modal .media_details .post-user-img img {
-	display: block;
-	width: 100%;
-	height: 65px;
-	object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 65px;
+    object-fit: cover;
 }
+
 .media_modal .media_details .commentImg img {
-	display: block;
-	width: 100%;
-	height: 36px;
-	object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 36px;
+    object-fit: cover;
 }
+
 .media_modal .media_details .emojioneemoji {
-	display: initial;
-	width: initial;
-	height: initial;
-	object-fit: initial;
+    display: initial;
+    width: initial;
+    height: initial;
+    object-fit: initial;
 }
+
 .logReg ul li a {
-	padding: 0 20px;
+    padding: 0 20px;
 }
-.logReg ul li a.notifBtn, .logReg ul li a.cartBtn {
-	padding: 0 10px;
-	position: relative;
+
+.logReg ul li a.notifBtn,
+.logReg ul li a.cartBtn {
+    padding: 0 10px;
+    position: relative;
 }
-.logReg ul li a.notifBtn i, .logReg ul li a.cartBtn i {
-	margin-right: 0;
+
+.logReg ul li a.notifBtn i,
+.logReg ul li a.cartBtn i {
+    margin-right: 0;
 }
-.notifBtn span, .cartBtn span {
-	position: absolute;
-	background: #0cb3f0;
-	width: 30px;
-	height: 30px;
-	padding: 0;
-	line-height: 30px;
-	text-align: center;
-	border-radius: 50%;
-	right: -12px;
-	top: -10px;
+
+.notifBtn span,
+.cartBtn span {
+    position: absolute;
+    background: #0cb3f0;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+    right: -12px;
+    top: -10px;
 }
+
 .notification_item.seen {
-	opacity: 0.7;
+    opacity: 0.7;
 }
-.subscribe-Btn, .follow-Btn {
-	line-height: initial;
-	padding: 8px 10px;
+
+.subscribe-Btn,
+.follow-Btn {
+    line-height: initial;
+    padding: 8px 10px;
 }
+
 .profile-banner-rgt li:not(:last-child) {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
+
 .view_media {
-	cursor: pointer;
+    cursor: pointer;
 }
+
 .view_media.locked {
-	height: 100%;
-	color: #393939;
+    height: 100%;
+    color: #393939;
 }
+
 .view_media .info {
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+
 .view_media .info p {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
+
 .view_media .info .commonBtn {
-	line-height: normal;
-	font-size: 14px;
-	padding: 8px 10px;
+    line-height: normal;
+    font-size: 14px;
+    padding: 8px 10px;
 }
-.m-r-0, .logReg ul li a i.m-r-0 {
-	margin-right: 0;
+
+.m-r-0,
+.logReg ul li a i.m-r-0 {
+    margin-right: 0;
 }
+
 .table-mini-cart td:nth-of-type(1) {
-	width: 60%;
+    width: 60%;
 }
+
 tr[order_status="0"] {
-	opacity: 0.4;
+    opacity: 0.4;
 }
-tr[order_status="1"] {
-}
+
+tr[order_status="1"] {}
+
 tr[order_status="2"] {
-	text-decoration: line-through;
+    text-decoration: line-through;
 }
+
 tr[order_status="3"] {
-	background: #a3e3fb;
+    background: #a3e3fb;
 }
+
 .opentok_player_area {
-	background: #000;
+    background: #000;
 }
-.chatbox, .chatbox2 {
-	position: relative;
-	border: 1px solid #ccc;
-	padding: 5px;
-	border-radius: 30px;
-}
+
+.chatbox,
 .chatbox2 {
-	margin-bottom: 4px;
+    position: relative;
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 30px;
 }
+
+.chatbox2 {
+    margin-bottom: 4px;
+}
+
 .chatbox .chatlist {
-	height: 250px;
-	overflow-y: auto;
+    height: 250px;
+    overflow-y: auto;
 }
+
 .chatoffline {
-	display: none;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	background: #333;
-	background: #747575;
-	color: #fff;
-	text-align: center;
-	padding: 20px;
-	z-index: 8;
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #333;
+    background: #747575;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    z-index: 8;
 }
+
 .chatbox.offline .chatoffline {
-	display: block;
+    display: block;
 }
+
 .chatbox .chatlist .chatitem {
-	padding: 4px;
+    padding: 4px;
 }
+
 .chatbox .chatlist .chatitem .chatitemin {
-	width: 80%;
-	display: inline-block;
-	padding: 3px 8px;
-	/* border: 1px solid #ccc; */
-	border-radius: 10px;
-	background: #dfdfdf;
-	font-size: 13px;
+    width: 80%;
+    display: inline-block;
+    padding: 3px 8px;
+    /* border: 1px solid #ccc; */
+    border-radius: 10px;
+    background: #dfdfdf;
+    font-size: 13px;
 }
+
 .chatbox .chatlist .chatitem .chatitemin img.emojioneemoji {
-	height: 20px;
+    height: 20px;
 }
+
 .chatbox .chatlist .chatitem.own {
-	text-align: right;
+    text-align: right;
 }
+
 .chatbox .chatlist .chatitem.info {
-	text-align: center;
+    text-align: center;
 }
+
 .chatbox .chatlist .chatitem.info .chatitemin {
-	background: #ffd610bf;
-	color: #080808;
+    background: #ffd610bf;
+    color: #080808;
 }
+
 .chatbox .chatlist .chatitem.own .chatitemin {
-	text-align: left;
-	border: 1px solid #0cb3f0;
-	background: #9ce5ff;
+    text-align: left;
+    border: 1px solid #0cb3f0;
+    background: #9ce5ff;
 }
+
 .chatbox .chatfields {
-	position: relative;
+    position: relative;
 }
+
 .chatbox .chatfields .chat_tips {
-	position: absolute;
-	left: 5px;
-	top: -6px;
-	z-index: 1;
-	width: 27px;
-	height: 27px;
-	background: #0cb3f0;
-	cursor: pointer;
-	border-radius: 50%;
-	color: #fff;
-	font-size: 14px;
-	padding: 3px 0 0 6px;
+    position: absolute;
+    left: 5px;
+    top: -6px;
+    z-index: 1;
+    width: 27px;
+    height: 27px;
+    background: #0cb3f0;
+    cursor: pointer;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 14px;
+    padding: 3px 0 0 6px;
 }
+
 .chat_tips_popup {
-	position: absolute;
-	z-index: 5;
-	left: 0;
-	right: 0;
-	width: 100%;
-	top: 0;
-	bottom: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	display: none;
+    position: absolute;
+    z-index: 5;
+    left: 0;
+    right: 0;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
 }
+
 .chat_tips_popup_content {
-	width: 90%;
-	background: #fff;
-	padding: 10px;
-	border: 1px solid #ccc;
-	border-radius: 12px;
+    width: 90%;
+    background: #fff;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 12px;
 }
+
 .chat_tips_submit {
-	background: #0cb3f0;
-	color: #fff;
-	display: block;
-	line-height: 37px;
-	border-radius: 0.25rem;
-	text-align: center;
+    background: #0cb3f0;
+    color: #fff;
+    display: block;
+    line-height: 37px;
+    border-radius: 0.25rem;
+    text-align: center;
 }
+
+
 /*.opentok_placeholder_img::after {
     position: absolute;
     content: "";
@@ -349,88 +427,100 @@ tr[order_status="3"] {
     height: 100%;
     background: rgb(0 0 0 / 70%);
 }*/
-.live-sec .video_area {
-}
+
+.live-sec .video_area {}
+
 .opentok_placeholder_img {
-	/*position: absolute;
+    /*position: absolute;
   content: "";
   width: 100%;
   position: absolute;
   z-index: 1;
   top: 0;
   left: 0;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
 .opentok_placeholder_img::before {
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-	background: rgb(0 0 0 / 70%);
-	z-index: 1;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: rgb(0 0 0 / 70%);
+    z-index: 1;
 }
+
 .opentok_placeholder_img .offCont {
-	position: absolute;
-	color: #e4e4e4;
-	z-index: 2;
-	/*left: 50%;
+    position: absolute;
+    color: #e4e4e4;
+    z-index: 2;
+    /*left: 50%;
     transform: translate(-50%);
     top: 50%;*/
-	font-size: 22px;
+    font-size: 22px;
 }
+
 .opentok_placeholder_img .offCont h3 {
-	color: #e4e4e4;
+    color: #e4e4e4;
 }
+
 .view_counter {
-	display: inline-block;
-	line-height: 27px;
-	margin: 0 20px;
+    display: inline-block;
+    line-height: 27px;
+    margin: 0 20px;
 }
+
 .vfWrap {
-	position: absolute;
-	right: 0;
-	bottom: 0;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
+
 .vfWrap .vfBtn {
-	background: #0cb3f0;
-	padding: 7px 10px;
-	color: #fff;
-	font-size: 13px;
-	text-align: center;
-	line-height: 1.25;
-	text-transform: uppercase;
-	font-weight: 600;
+    background: #0cb3f0;
+    padding: 7px 10px;
+    color: #fff;
+    font-size: 13px;
+    text-align: center;
+    line-height: 1.25;
+    text-transform: uppercase;
+    font-weight: 600;
 }
+
 .vfWrap .vfBtn span {
-	font-size: 9px;
-	display: block;
-	margin-bottom: 3px;
+    font-size: 9px;
+    display: block;
+    margin-bottom: 3px;
 }
+
 .vfModalMd h4 {
-	color: #333;
-	font-weight: 700;
-	padding: 0;
+    color: #333;
+    font-weight: 700;
+    padding: 0;
 }
+
 .vfModalMd h5 {
-	text-align: center;
-	font-weight: 500;
-	font-size: 15px;
-	color: #797777;
-	padding: 0;
-	line-height: 1.5;
+    text-align: center;
+    font-weight: 500;
+    font-size: 15px;
+    color: #797777;
+    padding: 0;
+    line-height: 1.5;
 }
+
 .otpTop {
     margin: 20px 0 5px;
 }
+
 .otpTop h4 {
     text-align: center;
     color: #f0820c;
     font-size: 16px;
     font-weight: 700;
 }
+
 .otpBtm input {
     -ms-flex-preferred-size: 0;
     flex-basis: 0;
@@ -442,6 +532,7 @@ tr[order_status="3"] {
     border: #ddd 1px solid;
     padding: 0 20px;
 }
+
 .otpBtm button {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 60px;
@@ -453,32 +544,41 @@ tr[order_status="3"] {
     font-size: 18px;
     text-align: center;
 }
+
 .tryAgain {
     color: red;
 }
+
 .rcvSms {
     margin-top: 20px;
 }
+
 .rcvSms a {
     color: #24baf2;
     text-decoration: underline;
 }
-.red_border{
-	border:2px solid #F00;
+
+.red_border {
+    border: 2px solid #F00;
 }
+
 .verified a {
     color: #04921a;
 }
+
 .verified {
     transform: translateY(-50%);
     right: 10px;
 }
-.social-share ul{
-	display: flex;
+
+.social-share ul {
+    display: flex;
 }
-.social-share ul li:not(:last-child){
-	margin-right: 8px;
+
+.social-share ul li:not(:last-child) {
+    margin-right: 8px;
 }
+
 .social-share ul li a {
     height: 45px;
     width: 45px;
@@ -487,26 +587,34 @@ tr[order_status="3"] {
     border-radius: 5px;
     text-align: center;
     font-size: 25px;
-	border: 1px solid #ccc;
+    border: 1px solid #ccc;
 }
-.social-share li a .fa-facebook{
-	 color: #0d6efd;
+
+.social-share li a .fa-facebook {
+    color: #0d6efd;
 }
-.social-share li a .fa-twitter{
-	 color: deepskyblue;
+
+.social-share li a .fa-twitter {
+    color: deepskyblue;
 }
-.social-share li a .fa-linkedin{
-	 color: #0e76a8;
+
+.social-share li a .fa-linkedin {
+    color: #0e76a8;
 }
-.social-share li a .fa-whatsapp{
-	color: #25D366
+
+.social-share li a .fa-whatsapp {
+    color: #25D366
 }
-.social-share li a .fa-reddit{
-	color: #FF4500;;
+
+.social-share li a .fa-reddit {
+    color: #FF4500;
+    ;
 }
-.social-share li a .fa-telegram{
-	color: #0088cc;
+
+.social-share li a .fa-telegram {
+    color: #0088cc;
 }
+
 .new-dashboard-menu:hover .menu-scroll .scrollbar-track {
     opacity: 1;
 }
