--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -6828,6 +6828,22 @@ span.inlove-emoji {
     line-height: 36px;
     height: 36px;
     align-items: center;
+    position: relative;
+}
+.online-user {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    line-height: 20px;
+    display: inline-block;
+    background-color: #fff;
+    text-align: center;
+    padding: 0 !important;
+    left: 0;
+    top: -2px;
+    border-radius: 50%;
+    font-size: 10px;
+    border: 1px solid #0cb3f0;
 }
 
 .new-dashboard-menu li span,
@@ -8213,7 +8229,7 @@ h5.alert-content {
     padding: 0;
     background-color: #f1fafd;
     box-shadow: 0px 0px 10px 2px rgba(54, 56, 56, 0.13);
-    border-radius: 4px px 4px 0 0;
+    border-radius: 4px 4px 0 0;
 }
 
 .live-sec-new .chatbox .chatlist {
