--- a/public/front/css/media.css
+++ b/public/front/css/media.css
@@ -6,7 +6,11 @@
 
 @media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 1366px) {}
+@media only screen and (max-width: 1366px) {
+    .privet-chat-req-msg {
+        font-size: 0.875rem;
+    }
+}
 
 @media only screen and (max-width: 1350px) {}
 
