--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -9020,5 +9020,51 @@ input[type=number]::-webkit-outer-spin-button {
     outline: none !important;
 }
 
-
+.user-add{
+    display: flex;
+    margin-bottom: 8px;
+    padding: 6px;
+    border-radius: 4px;
+}
+.user-add-name{
+    flex: 0 0 30px;
+    max-width: 30px;
+}
+.user-name-ltr{
+    display: block;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 18px;
+    border-radius: 50%;
+    background-color: #000;
+    text-align: center;
+    color: #fff;
+}
+.user-add-msg {
+    flex: 1 0;
+    padding-left: 7px;
+}
+.user-msg-text{
+    padding: 5px 8px;
+    font-size: 13px;
+    border-radius: 15px;
+}
+.tipped {
+    background: #f9eaa7;
+    color: #080808;
+}
+.join{
+    background-color: #00a510;
+    color: #fff;
+}
+.left{
+    background-color: #f99983;
+    color: #000;
+}
+.chatitem:not(.own) .chatitemin{
+    padding-right: 40px !important;
+}
 /* New Design user Live Chat End */
