--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8185,12 +8185,20 @@ h5.alert-content {
 }
 
 .new-video-chat-rgt {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 550px;
+    /* -webkit-box-flex: 0;
+    -ms-flex: 0 0 550px; */
     flex: 0 0 550px;
     max-width: 550px;
     padding-left: 15px;
     padding-right: 15px;
+}
+.new-video-chat-rgt.medium{
+    flex: 0 0 500px;
+    max-width: 500px;
+}
+.new-video-chat-rgt.small{
+    flex: 0 0 400px;
+    max-width: 400px;
 }
 
 .video-chat-lft-control .chat-top-control .chat-control-btn:hover {
@@ -9066,5 +9074,120 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .chatitem:not(.own) .chatitemin{
     padding-right: 40px !important;
+}
+
+
+
+.timestamps-wrap{
+    display: flex;
+    align-items: center;
+}
+.timestamps-wrap-text {
+    flex: 1 0;
+    font-size: 20px;
+}
+.timestamps {
+    flex: 0 0 170px;
+    max-width: 170px;
+}
+.size-wrap{
+    display: flex;
+    align-items: center;
+}
+.size-wrap-text {
+    flex: 1 0;
+    font-size: 20px;
+}
+.size-box {
+    flex: 0 0 170px;
+    max-width: 170px;
+}
+/* Toogle */
+.timestamps .switches-container {
+    width: 100%;
+    position: relative;
+    display: flex;
+    padding: 0;
+    position: relative;
+    background: #00aff0;
+    line-height: 3rem;
+    border-radius: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* input (radio) for toggling. hidden - use labels for clicking on */
+.timestamps .switches-container input {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+}
+
+/* labels for the input (radio) boxes - something to click on */
+.timestamps .switches-container label {
+    width: 50%;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
+}
+
+/* switch highlighters wrapper (sliding left / right)
+    - need wrapper to enable the even margins around the highlight box
+*/
+.timestamps .switch-wrapper {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    padding: 0.15rem;
+    z-index: 3;
+    transition: transform .5s cubic-bezier(.77, 0, .175, 1);
+    /* transition: transform 1s; */
+}
+
+/* switch box highlighter */
+.timestamps .time-switch {
+    border-radius: 3rem;
+    background: #fff;
+    height: 100%;
+}
+
+/* switch box labels
+    - default setup
+    - toggle afterwards based on radio:checked status
+*/
+.timestamps .time-switch div {
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    display: block;
+    color: #00aff0 ;
+    transition: opacity .2s cubic-bezier(.77, 0, .175, 1) .125s;
+    will-change: opacity;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* slide the switch box from right to left */
+.timestamps .switches-container input:nth-of-type(1):checked~.switch-wrapper {
+    transform: translateX(0%);
+}
+
+/* slide the switch box from left to right */
+.timestamps .switches-container input:nth-of-type(2):checked~.switch-wrapper {
+    transform: translateX(100%);
+}
+
+/* toggle the switch box labels - first checkbox:checked - show first switch div */
+.timestamps .switches-container input:nth-of-type(1):checked~.switch-wrapper .time-switch div:nth-of-type(1) {
+    opacity: 1;
+}
+
+/* toggle the switch box labels - second checkbox:checked - show second switch div */
+.timestamps .switches-container input:nth-of-type(2):checked~.switch-wrapper .time-switch div:nth-of-type(2) {
+    opacity: 1;
 }
 /* New Design user Live Chat End */
